update locale ja

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -5,17 +5,33 @@ ja:
         user:
           attributes:
             email:
+              taken: "は既に使用されています。"
               blank: "が入力されていません。"
+              too_short: "は%{count}文字以上に設定して下さい。"
+              too_long: "は%{count}文字以下に設定して下さい。"
+              invalid: "は有効でありません。"
             password:
               blank: "が入力されていません。"
+              taken: "は既に使用されています。"
+              blank: "が入力されていません。"
+              too_short: "は%{count}文字以上に設定して下さい。"
+              too_long: "は%{count}文字以下に設定して下さい。"
+              invalid: "は有効でありません。"
+              confirmation: "が内容とあっていません。"
             username:
               blank: "が入力されていません。"
+              too_short: "は%{count}文字以上に設定して下さい。"
+              too_long: "は%{count}文字以下に設定して下さい。"
+              invalid: "は有効でありません。"
             postal_code:
               blank: "が入力されていません。"
+              invalid: "は有効でありません。"
             prefecture_code:
               blank: "が入力されていません。"
+              invalid: "は有効でありません。"
             city:
               blank: "が入力されていません。"
+              invalid: "は有効でありません。"
     attributes:
       user:
         current_password: "現在のパスワード"
